--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* all */
+
 :root {
     --dark_blue: #2F303A;
 --blue: #2196F3;
@@ -8,4 +10,142 @@
 --light_grey: #ECECEC;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    text-underline-position: from-font;
+text-decoration-skip-ink: none;
+}
 
+body {
+    width: 100%;
+}
+/* header */
+
+header {
+    height: 80px;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+}
+.header_div {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+}
+nav {
+    width: 24%;
+}
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+}
+.header_div_span {
+    width: 27%;
+}
+/* first */
+
+.first {
+    background-color: var(--dark_blue);
+    height: 600px;
+    width: 100%;
+}
+
+.first div {
+display: flex;
+justify-content: center;
+margin-top: 30px;
+}
+
+.first h1 {
+    font-family: Roboto;
+font-size: 44px;
+font-weight: 900;
+line-height: 60px;
+letter-spacing: 0.06em;
+text-align: center;
+display: flex;
+justify-content: center;
+color: var(--white);
+padding-top: 200px;
+}
+
+.first button {
+    width: 216px;
+height: 50px;
+top: 430px;
+left: 692px;
+background-color: var(--blue);
+border-radius: 4px 4px 4px 4px;
+font-family: Roboto;
+font-size: 16px;
+font-weight: 700;
+line-height: 30px;
+letter-spacing: 0.06em;
+text-align: center;
+color: var(--white);
+}
+
+/* special */
+.special {
+    height: 286px;
+}
+
+.special_content {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 94px;
+}
+
+.special_div {
+    width: 23%;
+}
+
+.special_div h3 {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16.41px;
+    letter-spacing: 0.03em; 
+    color: var(--dark_grey);
+}
+
+.special_div p {
+    font-family: Roboto;
+font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: var(--grey);
+margin-top: 10px;
+}
+
+/* about */
+
+.about {
+    height: 480px;
+}
+
+.about h2 {
+    text-align: center;
+    font-family: Roboto;
+font-size: 36px;
+font-weight: 700;
+line-height: 42.19px;
+letter-spacing: 0.03em;
+margin-bottom: 50px;
+}
+
+.about div {
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
+}
