--- a/css/main.css
+++ b/css/main.css
@@ -125,12 +125,54 @@ nav ul {
   margin-bottom: 50px;
 }
 
-.about div {
+.div_about {
   width: 75%;
   margin-right: auto;
   margin-left: auto;
   display: flex;
   justify-content: space-between;
+}
+
+.about > h4 {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 3%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.div_about_box1 {
+  background-image: url("./../../img/box1.png");
+  width: 370px;
+  height: 294px;
+  position: relative;
+}
+
+.div_about_box2 {
+  background-image: url("./../../img/box2.png");
+  width: 370px;
+  height: 294px;
+  position: relative;
+}
+
+.div_about_box3 {
+  background-image: url("./../../img/box3.png");
+  width: 370px;
+  height: 294px;
+  position: relative;
+}
+
+.box_title {
+  width: 370px;
+  height: 70px;
+  background-color: aqua;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .team {
@@ -205,8 +247,8 @@ nav ul {
 }
 
 .svg_icon:hover {
-  --color3: colors.$blue;
-  --color1: colors.$white;
+  --color3: #2196f3;
+  --color1: #ffffff;
 }
 
 .brands div {
@@ -238,7 +280,7 @@ nav ul {
 }
 
 .svg_icon_brands:hover {
-  --color1: colors.$blue;
+  --color1: #2196f3;
 }
 
 footer {
