--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,3 +1,5 @@
+@use "../utils/colors";
+
 .about {
   height: 480px;
 }
@@ -21,33 +23,40 @@
 
 .about > h4 {
   font-family: Roboto;
-font-weight: 700;
-font-size: 14px;
-line-height: 100%;
-letter-spacing: 3%;
-text-align: center;
-text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 3%;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-@each $box in box1,box2,box3 {
+@each $box in box1, box2, box3 {
   .div_about_#{$box} {
-background-image: url("./../../img/#{$box}.png");
-width: 370px;
-height: 294px;
-position: relative;
+    background-image: url("../img/#{$box}@1x.png");
+    width: 370px;
+    height: 294px;
+    position: relative;
   }
 }
 
 .box_title {
   width: 370px;
   height: 70px;
-
-  background-color:aqua;
-
+  color: colors.$white;
+  background-color: colors.$dark_blue;
+  opacity: 0.8;
   position: absolute;
   bottom: 0;
   display: flex;
   justify-content: center;
-  
   align-items: center;
+}
+
+@media (min-resolution: 2x) {
+  @each $box in box1, box2, box3 {
+    .div_about_#{$box} {
+      background-image: url("../img/#{$box}@2x.png");
+    }
+  }
 }
