--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -36,7 +36,8 @@
     background-image: url("../img/#{$box}@1x.png");
     width: 370px;
     height: 294px;
-    position: relative;
+    display: flex;
+    align-items: end;
   }
 }
 
@@ -46,8 +47,6 @@
   color: colors.$white;
   background-color: colors.$dark_blue;
   opacity: 0.8;
-  position: absolute;
-  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
