--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,11 @@ header {
 
 nav {
   width: 18%;
+  height: 100%;
 }
 
 nav ul {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -39,8 +41,37 @@ nav ul {
   letter-spacing: 2%;
 }
 
-nav li:hover {
-  text-decoration: underline;
+a {
+  color: black;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header_nav_ul_li {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.header_nav_ul_li:hover .nav_overlay {
+  color: #2196f3;
+  transform: translateX(0);
+}
+.header_nav_ul_li:hover a {
+  color: #2196f3;
+}
+
+.nav_overlay {
+  width: 100%;
+  height: 3.75px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .first {
@@ -153,6 +184,10 @@ nav li:hover {
 
 .svg_icon_close:hover path {
   fill: #2196f3;
+}
+
+.svg_icon_close path {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal p {
@@ -419,6 +454,7 @@ nav li:hover {
 .svg_icon {
   width: 44px;
   height: 44px;
+  transition: var(--color1) 250ms cubic-bezier(0.4, 0, 0.2, 1), var(--color3) 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .div_icons {
@@ -448,6 +484,7 @@ nav li:hover {
 .svg_icon_brands {
   width: 170px;
   height: 92px;
+  transition: var(--color1) 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brands {
