--- a/sass/components/_brands.scss
+++ b/sass/components/_brands.scss
@@ -12,6 +12,7 @@
 .svg_icon_brands {
   width: 170px;
   height: 92px;
+  transition: var(--color1) 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brands {
