--- a/sass/components/_first.scss
+++ b/sass/components/_first.scss
@@ -114,6 +114,10 @@
   }
 }
 
+.svg_icon_close path {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal p {
   font-family: Roboto;
   font-weight: 400;
