--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,9 +17,12 @@ header {
 
 nav {
   width: 18%;
+  height: 100%;
+  
 }
 
 nav ul {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -41,6 +44,38 @@ nav ul {
   letter-spacing: 2%;
 }
 
-nav li:hover {
-  text-decoration: underline;
+a {
+  color: black;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header_nav_ul_li {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  &:hover .nav_overlay {
+    color: colors.$blue;
+    transform: translateX(0);
+  }
+  &:hover a {
+    color: colors.$blue;
+  }
+}
+
+
+.nav_overlay {
+  width: 100%;
+  height: 3.75px;
+  border-radius: 2px;
+  background-color: colors.$blue;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-100%);
+  transition: transform 250ms ease-in-out;
+
 }
