--- a/sass/components/_first.scss
+++ b/sass/components/_first.scss
@@ -1,4 +1,5 @@
 @use "./../utils/colors";
+@use "./../utils/mixins";
 
 .first {
   background-color: colors.$dark_blue;
@@ -8,8 +9,7 @@
 }
 
 .first div {
-  display: flex;
-  justify-content: center;
+  @include flex_center;
   margin-top: 30px;
 }
 
@@ -19,8 +19,7 @@
   line-height: 60px;
   letter-spacing: 0.06em;
   text-align: center;
-  display: flex;
-  justify-content: center;
+  @include flex_center;
   color: colors.$white;
   padding-top: 200px;
 }
@@ -43,9 +42,7 @@
 
 .backdrop {
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex_all_center;
   top: 0;
   width: 100%;
   height: 100%;
@@ -99,9 +96,7 @@
 .btn-close {
   width: 30px;
   height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex_all_center;
   border-radius: 50%;
   background: none;
   border-color: rgba(0, 0, 0, 0.1);
