--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 1320px) {
+  .header_div_span {
+    flex-direction: column;
+  }
+}
 header {
   height: 80px;
   background-color: #ffffff;
@@ -13,32 +18,24 @@ header {
   align-items: center;
 }
 
-nav {
-  width: 18%;
-  height: 100%;
-}
-
-nav ul {
+header nav ul {
   height: 100%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
   font-family: Roboto;
-  font-weight: 500;
   font-size: 14px;
-  line-height: 100%;
-  letter-spacing: 2%;
 }
 
 .header_div_span {
-  width: 27%;
   display: flex;
   justify-content: space-between;
   font-family: Roboto;
-  font-weight: 500;
   font-size: 14px;
-  line-height: 100%;
-  letter-spacing: 2%;
+}
+
+p {
+  margin: 10px;
 }
 
 a {
@@ -54,6 +51,7 @@ a {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  margin: 10px;
 }
 .header_nav_ul_li:hover .nav_overlay {
   color: #2196f3;
@@ -296,10 +294,24 @@ a {
     background-color: #2f303a;
   }
 }
-.special {
-  height: 286px;
+@media screen and (max-width: 1320px) {
+  .special_content {
+    flex-wrap: wrap;
+  }
+  .special_div {
+    width: 354px;
+  }
 }
-
+@media screen and (max-width: 480px) {
+  .special_content {
+    flex-wrap: wrap;
+  }
+  .special_div {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .special_content {
   width: 75%;
   margin-left: auto;
@@ -310,7 +322,8 @@ a {
 }
 
 .special_div {
-  width: 23%;
+  width: 270px;
+  margin-bottom: 20px;
 }
 
 .special_div h3 {
@@ -330,10 +343,11 @@ a {
   margin-top: 10px;
 }
 
-.about {
-  height: 480px;
+@media screen and (max-width: 1320px) {
+  .div_about {
+    flex-wrap: wrap;
+  }
 }
-
 .about h2 {
   text-align: center;
   font-size: 36px;
@@ -367,6 +381,9 @@ a {
   height: 294px;
   display: flex;
   align-items: end;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
 }
 
 .div_about_box2 {
@@ -375,6 +392,9 @@ a {
   height: 294px;
   display: flex;
   align-items: end;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
 }
 
 .div_about_box3 {
@@ -383,6 +403,9 @@ a {
   height: 294px;
   display: flex;
   align-items: end;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
 }
 
 .box_title {
@@ -407,8 +430,17 @@ a {
     background-image: url("../img/box3@2x.png");
   }
 }
+@media screen and (max-width: 1320px) {
+  .team_content {
+    flex-wrap: wrap;
+  }
+  .team_content_div {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+  }
+}
 .team {
-  height: 708px;
   background-color: #ececec;
   width: 100%;
 }
@@ -484,16 +516,21 @@ a {
   --color1: #ffffff;
 }
 
-.brands div {
+@media screen and (max-width: 1320px) {
+  .brands_cheto {
+    flex-wrap: wrap;
+  }
+}
+.brands_cheto {
   display: flex;
   justify-content: space-between;
-  width: 1170px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 94px;
 }
 
 .svg_icon_brands {
+  margin-bottom: 15px;
   width: 170px;
   height: 92px;
   transition: var(--color1) 250ms cubic-bezier(0.4, 0, 0.2, 1);
