--- a/sass/components/_brands.scss
+++ b/sass/components/_brands.scss
@@ -1,15 +1,22 @@
 @use "../utils/colors";
+@use "./../utils/mixins";
 
-.brands div {
+@media screen and (max-width: 1320px) {
+  .brands_cheto {
+    flex-wrap: wrap;
+  }
+}
+
+.brands_cheto {
   display: flex;
   justify-content: space-between;
-  width: 1170px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 94px;
 }
 
 .svg_icon_brands {
+  margin-bottom: 15px;
   width: 170px;
   height: 92px;
   transition: var(--color1) 250ms cubic-bezier(0.4, 0, 0.2, 1);
