--- a/sass/components/_first.scss
+++ b/sass/components/_first.scss
@@ -1,6 +1,8 @@
 @use "./../utils/colors";
 @use "./../utils/mixins";
 
+
+
 .first {
   background-color: colors.$dark_blue;
   height: 600px;
@@ -9,7 +11,7 @@
 }
 
 .first div {
-  @include flex_center;
+  @include mixins.flex_center;
   margin-top: 30px;
 }
 
@@ -19,7 +21,7 @@
   line-height: 60px;
   letter-spacing: 0.06em;
   text-align: center;
-  @include flex_center;
+  @include mixins.flex_center;
   color: colors.$white;
   padding-top: 200px;
 }
@@ -42,7 +44,7 @@
 
 .backdrop {
   position: fixed;
-  @include flex_all_center;
+  @include mixins.flex_all_center;
   top: 0;
   width: 100%;
   height: 100%;
@@ -96,7 +98,7 @@
 .btn-close {
   width: 30px;
   height: 30px;
-  @include flex_all_center;
+  @include mixins.flex_all_center;
   border-radius: 50%;
   background: none;
   border-color: rgba(0, 0, 0, 0.1);
