--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,11 @@
 @use "./../utils/colors";
+@use "./../utils/mixins";
+
+@media screen and (max-width: 1320px) {
+  .header_div_span {
+    flex-direction: column;
+  }
+}
 
 header {
   height: 80px;
@@ -15,39 +22,33 @@ header {
   align-items: center;
 }
 
-nav {
-  width: 18%;
-  height: 100%;
-  
-}
 
-nav ul {
+
+header nav ul {
   height: 100%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
   font-family: Roboto;
-  font-weight: 500;
   font-size: 14px;
-  line-height: 100%;
-  letter-spacing: 2%;
 }
 
 .header_div_span {
-  width: 27%;
   display: flex;
   justify-content: space-between;
   font-family: Roboto;
-  font-weight: 500;
   font-size: 14px;
-  line-height: 100%;
-  letter-spacing: 2%;
+}
+
+p {
+  margin: 10px;
 }
 
 a {
   color: black;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .header_nav_ul_li {
@@ -57,6 +58,7 @@ a {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  margin: 10px;
 
   &:hover .nav_overlay {
     color: colors.$blue;
