--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,7 +1,20 @@
 @use "./../utils/colors";
 
+@use "./../utils/mixins";
+
+@media screen and (max-width: 1320px) {
+  .team_content {
+    flex-wrap: wrap;
+  }
+  .team_content_div {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+  }
+}
+
+
 .team {
-  height: 708px;
   background-color: colors.$light_grey;
   width: 100%;
 }
