--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,12 @@ header {
 }
 
 .header_div {
-  width: 75%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 25px;
 }
 
 header nav ul {
@@ -305,11 +305,10 @@ a {
 @media screen and (max-width: 480px) {
   .special_content {
     flex-wrap: wrap;
+    flex-direction: column;
   }
   .special_div {
     width: 450px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 .special_content {
@@ -328,18 +327,13 @@ a {
 
 .special_div h3 {
   font-size: 14px;
-  font-weight: 700;
-  line-height: 16.41px;
-  letter-spacing: 0.03em;
   color: #212121;
 }
 
 .special_div p {
   font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.03em;
   color: #757575;
+  margin: 0;
   margin-top: 10px;
 }
 
@@ -524,8 +518,8 @@ a {
 .brands_cheto {
   display: flex;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-bottom: 94px;
 }
 
