--- a/sass/components/_brands.scss
+++ b/sass/components/_brands.scss
@@ -10,8 +10,8 @@
 .brands_cheto {
   display: flex;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-bottom: 94px;
 }
 
