--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,12 +14,12 @@ header {
 }
 
 .header_div {
-  width: 75%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 25px;
 }
 
 
