--- a/sass/components/_special.scss
+++ b/sass/components/_special.scss
@@ -13,11 +13,11 @@
 @media screen and (max-width: 480px) {
   .special_content {
     flex-wrap: wrap;
+    
+    flex-direction: column;
   }
   .special_div {
     width: 450px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -40,17 +40,12 @@
 
 .special_div h3 {
   font-size: 14px;
-  font-weight: 700;
-  line-height: 16.41px;
-  letter-spacing: 0.03em;
   color: colors.$dark_grey;
 }
 
 .special_div p {
   font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.03em;
   color: colors.$grey;
+  margin: 0;
   margin-top: 10px;
 }
